CB-297, add migration file
